# tiger-analytics-portfolio

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-app.txt  requirements.in  requirements.txt
.github/workflows/: notebooks-pages.yml  tests.yml
config/: config.yaml  demo.yaml
data/schema/: README.md  ddl.sql
docs/: DESIGN.md  EXECUTIVE_SUMMARY.md  INTERVIEW_WALKTHROUGH.md  MODEL_CARD.md  MODEL_CARD_TIMESERIES.md  README.md  RESULTS.md  TROUBLESHOOTING.md  methodology.md
notebooks/python/: 00_overview.ipynb  clustering_anomaly_detection.ipynb  readmission_prediction.ipynb  time_series_pmpm_forecasting.ipynb
notebooks/r/: healthcare_eda.Rmd
pipelines/: README.md  dag_airflow_example.py  run_pipeline.py
scripts/: create_repo_and_push.ps1  export_notebooks.py  push_to_github.ps1  run_demo.py  write_notebooks_index.py
sql/: feature_readmission.sql  monthly_pmpm_summary.sql  monthly_pmpm_summary_pg.sql  report_utilization_kpis.sql
src/python/: generate_healthcare_data.py  readmission_evaluation.py  readmission_features.py  readmission_model.py  spark_claims_agg.py  time_series_forecast.py  validate_data.py
src/r/: healthcare_eda.R  readmission_model_r.R
streamlit_app/: readmission_explorer.py
tests/: test_data_generation.py  test_readmission_evaluation.py  test_readmission_features.py  test_readmission_model.py  test_time_series_forecast.py
