[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tiger-analytics-portfolio"
version = "0.0.0"
description = "Healthcare analytics portfolio (synthetic data, notebooks, pipelines)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::sklearn.exceptions.UndefinedMetricWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src/python", "tests", "scripts", "streamlit_app"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
target-version = ["py310"]
line-length = 100
